replace in-memory db with mongo